config for offlineimap setup updated

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,13 +1,14 @@
-#backend = "glx"
-#backend = "xrender"
-#vsync = "opengl-swc"
-#vsync = "opengl"
-sw-opti = true
-glx-no-stencil = true
-#glx-copy-from-front = false
+backend = "glx";
+vsync = "opengl-swc";
+glx-copy-from-front = true;
+glx-swap-method = "2"
+xrender-sync = true;
+xrender-sync-fence = true;
+
+glx-no-stencil = true;
 glx-no-rebind-pixmap = true
-glx-swap-method = "exchange"
-refresh-rate = 0
-dbe = false
-paint-on-overlay = true
-unredir-if-possible = true
+sw-opti = false;
+refresh-rate = 0;
+dbe = false;
+paint-on-overlay = true;
+unredir-if-possible = true;
